Remove id third and add Class font-size-24
- removed id third and included class named font-size-24 as third and
  fourth element shares same property and it can be included in a class
  rather than making a separate idea which leads to duplicate code

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -9,10 +9,13 @@
     font-size: 36px;
 }
 
-#third,
-#fourth{
+.font-size-24{
     font-size: 24px;
 }
+/* #third,
+#fourth{
+    font-size: 24px;
+} */
 
 #fourth{
     background-color: rgb(115, 226, 115);
