--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -49,4 +49,15 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  margin: 0px;
+  padding: 0px;
+  
+}
+
+.left-links,
+.right-links{
+  display: flex;
+  align-items: center;
+  gap: 15px;
 }
