--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -5,6 +5,7 @@ body {
 img {
   width: 100px;
   height: 100px;
+
 }
 
 .title {
@@ -23,4 +24,25 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.title {
+  text-align: center;
+  margin-bottom: 32px;
+}
+.description {
+  display: flex;
+  justify-content: space-around;
+  gap: 52px;
+}
+
+.items{
+  flex-basis: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.text{
+  text-align: center;
 }
