Designing page using css flexbox
- Made modal div a flexbox container with padding 10px.
- Set flex-shrink as 0 to avoid icon getting smashed.
- Set flexbox layout for all other divs with the necessary padding, margins and other flex properties.
   - description div
        - flex direction set as column and set necessary padding
   - header div
        - added necessary margin and align contents according to the desired output.
   - down-buttonS div
        - added required paddins and gaps for required output.

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -1,6 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
-html, body {
+
+html,
+body {
   height: 100%;
 }
 
@@ -19,7 +21,9 @@ body {
   background: white;
   width: 480px;
   border-radius: 10px;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.2);
+  display: flex;
+  padding: 10px;
 }
 
 .icon {
@@ -33,13 +37,15 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
+  
 }
 
 .close-button {
   background: #eee;
   border-radius: 50%;
   color: #888;
-  font-weight: 400;
+  font-weight: 440;
   font-size: 16px;
   height: 24px;
   width: 24px;
@@ -67,3 +73,32 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+.description,
+.header,
+.text,
+.down-buttons {
+  display: flex;
+  
+}
+.description {
+  flex-direction: column;
+  padding-bottom: 0;
+  padding: 8px;
+}
+
+.header {
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-bottom: 6px;
+  font-size: 18px;
+  font-weight: 700;
+  
+}
+
+.down-buttons{
+  display: flex;
+  gap: 5px;
+  padding: 16px 0 0;
+}
+
